<resources>
    <string name="app_name">TicketApps</string>
    <string name="skip">Skip</string>
    <string name="continues">Continue</string>
    <string name="next">Next</string>
    <string name="text_to_Reg">Don\'t have an account? <b><font color='#03A9F4'>SIGN UP</font></b></string>
    <string name="text_to_Login">Already have an account? <b><font color='#03A9F4'>SIGN IN</font></b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ticket_apps">Ticket Apps</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="accept_terms_and_condition">Accept terms and condition</string>
    <string name="login">Login</string>
    <string name="did_you_forgot_your_password">Did you forgot your password?</string>
    <string name="tap_here_for_reset">Tap here for reset</string>
    <string name="or">or</string>
    <string name="google_icon">Google Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="background">Background</string>
    <string name="background_plane">Background Plane</string>
    <string name="button_back">Button Back</string>
    <string name="date">Monday, 20 July \'20</string>
    <string name="from">From</string>
    <string name="medan">Medan</string>
    <string name="indonesia">Indonesia</string>
    <string name="tokyo">Tokyo</string>
    <string name="japan">Japan</string>
    <string name="arrow_from_to">Arrow From To</string>
    <string name="passenger">Passanger</string>
    <string name="_2_child_4_adults">2 Child 4 Adults</string>
    <string name="class_tv">Class</string>
    <string name="economy">Economy</string>
    <string name="_6_flight_found">6 Flight Found</string>
    <string name="filter">Filter</string>
    <string name="airlines_icon">Airlines Icon</string>
    <string name="idn">IDN</string>
    <string name="_12_30">12:30</string>
    <string name="jpn">JPN</string>
    <string name="_16_00">16:00</string>
    <string name="_3_hours_11_minutes">3 hours 11 minutes</string>
    <string name="_214_00">$ 214,00</string>
    <string name="plane_icon">Plane Icon</string>
    <string name="to">To</string>
</resources>