<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/airlines_icon"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/airlines_icon"
                    android:src="@drawable/garuda"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_city_departure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/idn"
                    android:textColor="@color/TextColorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/airlines_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_time_departure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/_12_30"
                    android:textColor="@color/TextColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/airlines_icon"
                    app:layout_constraintTop_toBottomOf="@id/tv_city_departure" />

                <TextView
                    android:id="@+id/tv_city_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/jpn"
                    android:textColor="@color/TextColorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_time_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/_16_00"
                    android:textColor="@color/TextColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/tv_city_destination"
                    app:layout_constraintTop_toBottomOf="@id/tv_city_departure" />

                <TextView
                    android:id="@+id/tv_time_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/_3_hours_11_minutes"
                    android:textColor="@color/TextColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/airlines_icon"
                    app:layout_constraintTop_toBottomOf="@id/tv_time_destination" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/_214_00"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/tv_time_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_time_detail" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/plane_icon"
                    android:src="@drawable/ic_vector1"
                    app:layout_constraintBottom_toBottomOf="@id/tv_time_departure"
                    app:layout_constraintEnd_toStartOf="@id/tv_city_destination"
                    app:layout_constraintStart_toEndOf="@id/tv_city_departure"
                    app:layout_constraintTop_toTopOf="@id/tv_city_departure" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
