<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".register.RegisterScreenActivity">
    <TextView
        android:id="@+id/tvApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:text="@string/ticket_apps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvSubtitleReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="36sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvApps"
        />

    <EditText
        android:id="@+id/et_name_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="14sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitleReg"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        android:hint="email"
        android:inputType="textEmailAddress"


        android:textSize="14sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_reg"/>

    <EditText
        android:id="@+id/et_pass_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/et_no_reg"
        app:layout_constraintStart_toStartOf="@+id/et_no_reg"
        app:layout_constraintTop_toBottomOf="@+id/et_no_reg" />

    <EditText
        android:id="@+id/et_no_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="No HP"
        android:layout_marginTop="16dp"
        android:inputType="phone"
        android:textSize="14sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/et_email_reg"
        app:layout_constraintStart_toStartOf="@+id/et_email_reg"
        app:layout_constraintTop_toBottomOf="@+id/et_email_reg" />


    <Button
        android:id="@+id/btnReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_corner"
        android:layout_marginTop="27dp"
        android:text="Register"
        android:textColor="#FFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_pass_reg"
        app:layout_constraintStart_toStartOf="@+id/et_pass_reg"
        app:layout_constraintTop_toBottomOf="@+id/et_pass_reg" />


    <Button
        android:id="@+id/btnToLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:background="@drawable/border_btn"
        android:text="Sign In"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnReg"
        app:layout_constraintStart_toStartOf="@+id/btnReg" />

    <View
        android:id="@+id/divide"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="15dp"
        android:background="#BDBDBD"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/btnToLogin"
        app:layout_constraintStart_toStartOf="@+id/btnToLogin"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="Already have an account?"
        app:layout_constraintTop_toBottomOf="@+id/divide"
        app:layout_constraintBottom_toTopOf="@+id/btnToLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnToLogin"
        app:layout_constraintStart_toStartOf="@+id/btnToLogin" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accept terms and condition"
        app:layout_constraintStart_toStartOf="@+id/btnReg"
        app:layout_constraintTop_toBottomOf="@+id/btnReg" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>